# camera_viewpoint_interface

./: .gitmodules  CMakeLists.txt  README.md  imgui.ini  package.xml
examples/coppelia/: multicam_insertion.ttt
include/glad/: glad.h
include/multicam_mimicry/: multicam.hpp  object.hpp  shader.hpp  vectors.hpp
include/openvr_ros/: multicam.hpp  publish_goals.hpp  shader.hpp
include/viewpoint_interface/: camera.hpp  display.hpp  display_ring.hpp  helpers.hpp  instance.hpp  instance_info.hpp  layout.hpp  layout_component.hpp  layout_manager.hpp  mesh.hpp  model.hpp  object.hpp  scene_camera.hpp  scoreboard.hpp  shader.hpp  switch.hpp  timer.hpp  viewpoint_interface.hpp
include/viewpoint_interface/layouts/: carousel.hpp  double_pip.hpp  dynamic.hpp  grid.hpp  pip.hpp  split.hpp  timed_pip.hpp  twinned.hpp  twinned_pip.hpp  wide.hpp
launch/: multicam.launch  ros_openvr.launch  viewpoint_interface.launch
libs/vectors/: CMakeLists.txt  vectors.cpp
resources/config/: cam_buttons_config.json  cam_config.json  periscope.json  three_cam_pilot.json
resources/models/: coordinate_axes.mtl
resources/models/arrow/: arrow.mtl
resources/shaders/: backpack.frag  bg_shader.frag  bg_shader.vert  global.frag  global.vert
src/: glad.c  imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_tables.cpp  imgui_widgets.cpp  layout.cpp  layout_component.cpp  multicam.cpp  scoreboard.cpp  timer.cpp  viewpoint_interface.cpp
src/layout_system/: display_ring.cpp  display_state_cache.cpp  layout_component.cpp  layout_display_states.cpp
(+2 files in other folders)
